--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,16 @@ label {
 p {
   line-height: 1.5;
 }
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  line-height: 1.5;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 form {
   position: relative;
   left: 15px;
@@ -41,6 +51,7 @@ form {
   left: 20px;
   color: #5a6274;
   font-size: 16px;
+  padding: 10px;
 }
 .weather-now {
   color: #fdd153;
