reorganized rel links in html

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,7 @@ form {
   border-radius: 5px;
   position: relative;
   left: 10px;
+  max-width: 800px;
 }
 .container-location {
   position: relative;
