--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+  color: #5a6274;
 }
 form {
   position: relative;
@@ -59,13 +60,13 @@ form {
 .weather-now {
   color: #fdd153;
   opacity: 0.9;
-  font-size: 70px;
+  font-size: 60px;
   transition: all 150ms ease-in-out;
 }
 .weather-now:hover,
 .weather-icon:hover {
   opacity: 0.5;
-  font-size: 60px;
+  font-size: 70px;
 }
 .card {
   text-align: center;
@@ -106,4 +107,7 @@ form {
 .open-source {
   padding: 10px;
   margin: 0 10px 0;
+}
+#humidity strong {
+  color: #5a6274;
 }
